fix: hide thumbnails on mobile

--- a/src/components/blocks/gallery/gallery.scss
+++ b/src/components/blocks/gallery/gallery.scss
@@ -47,6 +47,12 @@
 
     &--carousel {
         .gallery__thumbnails {
+            @apply hidden;
+
+            @screen sm {
+                @apply grid;
+            }
+
             .gallery__item {
                 @apply rounded;
             }
